--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-saga": "^0.14.2",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
