--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-runtime": "^6.20.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-form": "^6.4.3",
     "redux-saga": "^0.14.2",
+    "redux-ui": "0.0.15",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.15.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.26.0"
   }
